# cheese

./: Cargo.toml  license.md
cheese_diagnostics/: Cargo.toml
cheese_diagnostics/src/: lib.rs  locating.rs
cheese_lexer/: Cargo.toml
cheese_lexer/src/: lib.rs
cheese_parser/: Cargo.toml  notes.txt
cheese_parser/src/: ast.rs  lib.rs  parser.rs  tests.rs  utilities.rs  validation.rs
cheese_parser/src/parser/: expression_parser.rs  function_parser.rs  let_parser.rs  match_parser.rs  module_parser.rs  trait_parser.rs  type_parser.rs
cheese_parser/src/tests/: closures.rs  complex_values.rs  for_loops.rs  full_program.cheese  functions.rs  if_expressions.rs  loops.rs  match_statements.rs  operators.rs  primitive_types.rs  primitive_values.rs  types.rs  variable_declarations.rs
cheese_utilities/: Cargo.toml
cheese_utilities/src/: lib.rs  strings.rs  trees.rs
src/: main.rs  test.cheese
