[package]
name = "cheese_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = {version = "0.4.1", features = ["auto-color"]}
lazy_static = "1.4.0"
cheese_diagnostics = {path = "../cheese_diagnostics" }
log = "0.4.21"